[gd_scene load_steps=10 format=3 uid="uid://bn8vnivdwoql7"]

[ext_resource type="Script" path="res://Scripts/survivor.gd" id="1_jshkn"]
[ext_resource type="Texture2D" uid="uid://biwb7oa63p6ou" path="res://textures/survivor_01.png" id="2_vs3rb"]
[ext_resource type="Script" path="res://Scripts/area_2d.gd" id="3_coa13"]
[ext_resource type="Texture2D" uid="uid://thddcickjmod" path="res://textures/survivor_02.png" id="3_mk1rh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_knfcb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vs3rb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_mk1rh")
}, {
"duration": 1.0,
"texture": ExtResource("2_vs3rb")
}],
"loop": true,
"name": &"hurt",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sq44v"]
size = Vector2(151, 219.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4eiqg"]
size = Vector2(226, 220)

[sub_resource type="SystemFont" id="SystemFont_ifegc"]
font_names = PackedStringArray("8-bit Limit (BRK)")
oversampling = 3.0

[sub_resource type="LabelSettings" id="LabelSettings_47npf"]
line_spacing = 1.0
font = SubResource("SystemFont_ifegc")
font_size = 71
outline_size = 15
outline_color = Color(0, 0, 0, 1)
shadow_size = 26
shadow_color = Color(0, 0, 0, 0.207843)

[node name="Survivor" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_jshkn")

[node name="Survivor01" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.5625, 2.5625)
sprite_frames = SubResource("SpriteFrames_knfcb")
animation = &"hurt"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5.5, -0.9375)
shape = SubResource("RectangleShape2D_sq44v")

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("3_coa13")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-6, -1)
scale = Vector2(0.71, 1)
shape = SubResource("RectangleShape2D_4eiqg")
debug_color = Color(0.949477, 1.2514e-06, 0.573295, 0.42)

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="Label" type="Label" parent="."]
offset_left = -170.0
offset_top = -198.0
offset_right = 140.0
offset_bottom = -122.0
text = "EAT SHIT!!!"
label_settings = SubResource("LabelSettings_47npf")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
